--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,14 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0; url=/">
+  <title>Moved — SKSRiders</title>
+</head>
+<body>
+  <p>This page has moved to <a href="/">SKSRiders</a>.</p>
+</body>
+</html>
 <!DOCTYPE html>
 
 <html lang="en-US">
