--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 		<section class="more wrap-note">
 			<h4>About SKSRiders</h4>
-			<p>We are building a network of affordable rest hubs for delivery riders. If you run a space and want to list it, contact us at <a href="mailto:info@sksriders.example">info@sksriders.example</a> or call the number above.</p>
+			<p>We are building a network of affordable rest hubs for delivery riders. If you run a space and want to list it, contact us at <a href="mailto:info@sksriders.com">info@sksriders.com</a> or call the number above.</p>
 		</section>
 	</main>
 
