--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	<footer class="site-footer">
 		<div class="wrap">
-			<small>&copy; SKSRiders — helping riders rest safely.</small>
+			<small>&copy; SKSRiders — helping riders rest safely | ESTD 2025 </small>
 		</div>
 	</footer>
 
