Changes in email id and rate

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 					<div class="listing-content">
 						<div class="listing-header">
 							<h3 class="listing-title" itemprop="name">Mahanagar Rest Hub</h3>
-							<p class="listing-price" itemprop="priceRange">₹299 <span class="per">/ month</span></p>
+							<p class="listing-price" itemprop="priceRange">Rs. 20 <span class="per">for 2 hours /
+									day</span></p>
 						</div>
 						<p class="listing-address"><span class="icon-sm">📍</span> <span itemprop="address">Mahanagar,
 								Lucknow</span></p>
@@ -112,9 +113,9 @@
 							</div>
 							<div class="form-group">
 								<label>Duration (Hours)</label>
-								<input type="range" name="hours" min="1" max="12" value="4"
+								<input type="range" name="hours" min="1" max="12" value="2"
 									oninput="this.nextElementSibling.value = this.value + ' hrs'">
-								<output>4 hrs</output>
+								<output>2 hrs</output>
 							</div>
 							<button type="submit" class="btn primary full-width">Send Request</button>
 						</form>
@@ -127,7 +128,7 @@
 			<div class="wrap">
 				<h2>Own a space?</h2>
 				<p>Partner with us and help riders in your area while earning extra income.</p>
-				<a href="mailto:info@sksrider.com" class="btn white">Become a Partner</a>
+				<a href="mailto:compoundvalleys@gmail.com" class="btn white">Become a Partner</a>
 			</div>
 		</section>
 	</main>
@@ -141,7 +142,7 @@
 			<div class="footer-links">
 				<a href="#">Privacy</a>
 				<a href="#">Terms</a>
-				<a href="mailto:info@sksrider.com">Contact</a>
+				<a href="mailto:compoundvalleys@gmail.com">Contact</a>
 			</div>
 		</div>
 	</footer>
