--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 								Lucknow</span></p>
 
 						<div class="listing-features">
-							<span>WiFi</span> • <span>Charging</span> • <span>Water</span> • <span>Rest Area</span>
+							<span>WiFi</span> • <span>Charging</span> • <span>RO Water</span> • <span>Rest Area
+								including toilet & washroom</span>
 						</div>
 
 						<div class="listing-actions">
