--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 						<div class="listing-features">
 							<span>WiFi</span> • <span>Charging</span> • <span>RO Water</span> • <span>Rest Area
-								including toilet & washroom</span>
+								with toilet & washroom</span>
 						</div>
 
 						<div class="listing-actions">
